--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         </tr>
         <div class="tbody">
           <tr>
-            <td id="lundi"></td>
-            <td id="mardi"></td>
-            <td id="mercredi"></td>
-            <td id="jeudi"></td>
-            <td id="vendredi"></td>
-            <td id="samedi"></td>
-            <td id="dimanche"></td>
+            <td id="1"></td>
+            <td id="2"></td>
+            <td id="3"></td>
+            <td id="4"></td>
+            <td id="5"></td>
+            <td id="6"></td>
+            <td id="7"></td>
           </tr>
         </div>
       </table>
@@ -89,6 +89,10 @@
           ><p><b>Lien :</b></p></label
         >
         <input type="text" name="lien" id="adress" />
+        <label id="img" for="myfile"
+          ><p><b>Image :</b></p></label
+        >
+        <input type="file" name="myfile" id="myfile" />
         <button
           type="submit"
           data-close-button
