--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
         >
           Confirmer
         </button>
-        <button data-close-button class="close-button">Annuler</button>
+        <button type="button" data-close-button class="close-button">
+          Annuler
+        </button>
       </form>
     </div>
     <div class="modal" id="modalsup">
@@ -125,7 +127,9 @@
         <button type="submit" data-close-button class="btn">
           Confirmer
         </button>
-        <button data-close-button class="close-button">Annuler</button>
+        <button type="button" class="close-button" data-close-button>
+          Annuler
+        </button>
       </form>
     </div>
     <div id="overlay"></div>
